--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Create an article</h1>
+<h1>Edit existing articles</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article from getting created.</h2>
@@ -14,8 +14,6 @@
 
 
 <%= form_for @article do |f| %>
-
-
   <p>
     <%= f.label :title %><br/>
     <%= f.text_field :title %>
@@ -35,4 +33,5 @@
 
 
 <% end %>
+
 <%= link_to "Back to article listing", articles_path %>
