--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>This is the home page of my app</h1>
-
-<%= link_to "AlphaBlog", articles_path %> | <%= link_to "About", about_path %>
+<div class="center jumbotron">
+  <h1>Cook Away</h1>
+<%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
