--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -96,3 +96,12 @@ padding-bottom: 15px;
 border-top: 1px solid #eaeaea;
 margin-top: 15px;
 }
+
+.listing {
+
+list-style: none;
+
+padding-left: 0;
+
+}
+
