--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
-<h1 align="center">All Cook Away Members</h1>
+<h1 align="center">All Alpha Bloggers</h1>
 
 <div align="center">
+
+<%= will_paginate %>
 
 <% @users.each do |user| %>
 
@@ -27,5 +29,7 @@
 </ul>
 
 <% end %>
+
+<%= will_paginate %>
 
 </div>
