--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class="center jumbotron">
-  <h1>Cook Away</h1>
-<%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+
+<h1>COOK AWAY</h1>
+
+<%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
+
 </div>
