--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <footer class="footer">
     <small>
       Copyright © <a href="https://cookaway.herokuapp.com/">The Cook Away Team</a>
-        by <a href="enter in a link here">Lal Gurung</a>
+       <a href="enter in a link here"></a>
     </small>
   <nav>
     <ul>
