--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1 align="center">All Cook Away member's</h1>
 
+
+
 <div align="center">
 
 <%= will_paginate %>
@@ -21,6 +23,14 @@
 </li>
 
 <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+
+<% if logged_in? and current_user.admin? %>
+
+<li><%= link_to "Delete this user", user_path(user), method: :delete,
+
+data: { confirm: "Are you sure you want to delete the user and all their articles?" } %></li>
+
+<% end %>
 
 </div>
 
